@startuml
'https://plantuml.com/class-diagram'
abstract class Vehiculo{
    # posicion : Posicion
    +{abstract} BaseEfectoDecorador aceptar(ElementoMapa elemento)
    + mover(Movimiento movimiento)
    + estaEnPosicion(Posicion posicionAComparar)
    + copiarPosicionA(Vehiculo vehiculo)
}

class Posicion{
    - fila : int
    - columna : int
    actualizarPosicion(Movimiento movimiento)
    calcularPosicion(Movimiento movimiento)
}

interface Movimiento{
    +moverFila(int columna)
    +moverColumna(int fila)
}
class MovArriba implements Movimiento{
    -int : cantMovimientos
    +int moverColumna(int columna)
    +int moverFila(int columna)
}
class MovAbajo implements Movimiento{
    -int : cantMovimientos
    +int moverColumna(int columna)
    +int moverFila(int columna)
}
class MovDerecha implements Movimiento{
    -int : cantMovimientos
    +int moverColumna(int columna)
    +int moverFila(int columna)
}
class MovIzquierda implements Movimiento{
    -int : cantMovimientos
    +int moverColumna(int columna)
    +int moverFila(int columna)
}

class Jugador{
    - cantMovimientos : int
    + estaEnPosicion(Posicion unaPosicion)
    + cantidadDeMovimientosEs(int unEntero)
    + mover(Movimiento movimiento)
    - alcanzoMeta : Bool
}

class Juego{
    - nombre : Nombre
    + mover(Movimiento movimiento)
    + estaFinalizado()
    + obtenerNombre()
    + obtenerPuntaje()
}

class CuatroPorCuatro{
    - pozosAtravesados : int
    +aceptar(ElementoMapa elemento)
    +pisarPozo()
    +pisoMasDeTresPozos()
}

class Moto extends Vehiculo{
    +aceptar(ElementoMapa elemento)
}
class Auto extends Vehiculo{
    +aceptar(ElementoMapa elemento)
}

class Ranking{
    -Jugadores : Map
    -unRanking : Ranking
    +RegistrarJugador(String : nombre, int : puntaje)
    +obtenerRanking()
    +obtenerPuntajeJugador(String : nombre)
}

class Direccion{
    - {static} Movimiento arriba
    - {static} Movimiento abajo
    - {static} Movimiento derecha
    - {static} Movimiento izquierda
    +{static} Movimiento arriba()
    +{static} Movimiento abajo()
    +{static} Movimiento derecha()
    +{static} Movimiento izquierda()

}
Direccion --> Movimiento

Juego ..> Ranking : Utiliza


CuatroPorCuatro --|> Vehiculo

Vehiculo *--Posicion

Jugador <.. Movimiento

Jugador *--"1" Vehiculo


Posicion ..> Movimiento : Utiliza
@enduml